derive/tests/behavior/02-wrong-usage.stderr
error[E0433]: failed to resolve: could not find `Behavior` in `behaviortree_derive`
 --> tests/behavior/02-wrong-usage.rs:5:24
  |
5 | #[behaviortree_derive::Behavior]
  |                        ^^^^^^^^ could not find `Behavior` in `behaviortree_derive`
